This is My Web Page
This is My Web Page

--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8"/>
+    <title></title>
   </head>
+  <body>
+    <h1>Joseph Landing</h1>
 
-  <h1>Joseph Landing</h1>
-
-  <p>My name is Joseph Landing and this is my website</p>
+  <p>My name is Joseph Landing and this is my website.</p>
 
   <img src="octocat.png" alt="octocat" />
+
+  </body>
+</html>
