--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8"/>
-    <title></title>
+    <title> Joseph Landing</title>
   </head>
   <body>
     <h1>Joseph Landing</h1>
